--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
           <div class="details">
             <div class="detail-row"><span>Date</span><strong>Friday, 17 October 2025</strong></div>
             <div class="detail-row"><span>Time</span><strong>6:00 PM — 10:00 PM</strong></div>
-            <div class="detail-row"><span>Venue</span><strong>Hotel to be communicated</strong></div>
-            <div class="detail-row"><span>Dress Code</span><strong style="color:var(--gold)">Formal Black Tie — BLACK ONLY</strong></div>
+            <div class="detail-row"><span>Venue</span><strong>Hotel430 </strong></div>
+            <div class="detail-row"><span>Dress Code</span><strong style="color:var(--gold)">Formal Black Tie, ya le sokodisa aparang smart casual bathong— BLACK ONLY</strong></div>
           </div>
           <div style="margin-top:18px;">
             <p class="small">Please RSVP by <strong>Friday, 10 October 2025</strong>. All guests (including plus ones) cover their own dinner bills.</p>
